src/config/service/worker/snapshots/roadster__config__service__worker__deserialize_tests__deserialize_tests@case_06.snap
---
source: src/config/service/worker/mod.rs
expression: worker_service_config
---
[enqueue-config]

[worker-config]

[sidekiq]
num-workers = 8
balance-strategy = 'round-robin'

[sidekiq.queue-config]

[sidekiq.redis]
uri = 'redis://[Sensitive]'

[sidekiq.redis.enqueue-pool]
min-idle = 1
max-connections = 2

[sidekiq.redis.fetch-pool]
min-idle = 3
max-connections = 4

[sidekiq.periodic]
stale-cleanup = 'auto-clean-all'

[pg]
num-workers = 8
balance-strategy = 'round-robin'

[pg.queue-config]

[pg.periodic]
enable = false
stale-cleanup = 'auto-clean-stale'

[pg.install]
enable = false
