src/config/service/worker/snapshots/roadster__config__service__worker__deserialize_tests__deserialize_tests@case_07.snap
---
source: src/config/service/worker/mod.rs
expression: worker_service_config
---
[enqueue-config]

[worker-config]

[sidekiq]
num-workers = 8
balance-strategy = 'round-robin'
[sidekiq.queue-config]
[sidekiq.redis]
uri = 'redis://[Sensitive]'
[sidekiq.redis.enqueue-pool]
[sidekiq.redis.fetch-pool]
[sidekiq.periodic]
stale-cleanup = 'auto-clean-stale'

[pg]
num-workers = 8
balance-strategy = 'round-robin'
[pg.queue-config]
[pg.database]
uri = 'postgres://[Sensitive]'
temporary-test-db = false
temporary-test-db-clean-up = true
connect-timeout = 1000
connect-lazy = false
acquire-timeout = 2000
idle-timeout = 10000
max-lifetime = 60000
min-connections = 1
max-connections = 2
test-on-checkout = false
retry-connection = false
enable-statement-logging = false
[pg.periodic]
enable = false
stale-cleanup = 'auto-clean-stale'
[pg.install]
enable = false
